Fixed layout of menu items so that align to the sides of the viewport.

--- a/main.css
+++ b/main.css
@@ -21,24 +21,60 @@ body {
 }
 
 header {
- 
+  display: block;
+  position: fixed;
+  z-index: 1;
+  top: 20px;
+  left: 250px;
+  right: 250px;
 }
 
+header h1 { text-align: center; }
+
 main {
-    background-color: white;
-    width: 500px;
-    margin: auto;
+  position: fixed;
+  z-index: 0;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 nav#main-menu ul li {
-    list-style-type: none;
-    width: 100px;
-    height: 100px;
-    background-color: green;
-    text-align: center;
-    margin: 1em;
-    box-sizing: border-box;
+  list-style-type: none;
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  text-align: center;
+  margin: 1em;
+  box-sizing: border-box;
+  position: fixed;
 }
+
+nav#main-menu ul li:nth-child(odd) {
+  left: 10px;
+}
+
+nav#main-menu ul li:nth-child(even) {
+  right: 10px;
+}
+
+nav#main-menu ul li:nth-child(1),
+nav#main-menu ul li:nth-child(2) {
+  top:  100px;  
+}
+
+nav#main-menu ul li:nth-child(3),
+nav#main-menu ul li:nth-child(4) {
+  top: 250px;
+}
+
+nav#main-menu ul li:nth-child(5),
+nav#main-menu ul li:nth-child(6) {
+  top: 400px;
+}
+
+
 
 nav#main-menu ul li a {
     text-decoration: none;
